[workspace]
resolver = "2"
members = [
    "core",
    "packages/bindings",
    "packages/testing-utils",
    "examples/governance-dao",
    "examples/dex-bot",
    "examples/zkp-aggregator",
    "examples/token-vesting",
]

[workspace.dependencies]
cosmwasm-std = "3"
cosmwasm-vm = "3"
serde = { version = "1", default-features = false, features = ["derive"] }
schemars = "0.8"
thiserror = "2"
truerepublic-bindings = { path = "packages/bindings" }
truerepublic-testing-utils = { path = "packages/testing-utils" }
